--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Homework 10</title>
+    <link rel="stylesheet" href="./st.css" />
+    <script src="index.js" type="module"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="container">
+      <select id="single" class="breed-select unvisible"></select>
+      <p class="loader unvisible"></p>
+      <p class="error unvisible">
+        Oops! Something went wrong! Try reloading the page!
+      </p>
+
+    </div>
+   
+    <div class="cat-info container">
+      <div class="cat-info-pict"></div>
+      <div class="cat-info-desc"></div>
+    </div>
+
+   
   </body>
 </html>
